--- a/.github/workflows/build-cockpit-zfs.yml
+++ b/.github/workflows/build-cockpit-zfs.yml
@@ -30,12 +30,14 @@ jobs:
       - name: Install build dependencies
         run: |
           apt-get update
-          apt-get install -y --no-install-recommends \
-            build-essential devscripts debhelper fakeroot \
-            lintian python3-all python3-setuptools python3-wheel \
-            python3-cython python3-pip pkg-config \
-            libglib2.0-dev libsystemd-dev libzfs-dev \
-            zfsutils-linux zfs-dkms reprepro curl ca-certificates gnupg
+          apt-get install -y \
+            ca-certificates curl jq rsync pkg-config \
+            build-essential debhelper devscripts fakeroot dpkg-dev dh-python \
+            python3 python3-pip python3-pyzfs python3-packaging python3-dev python3-setuptools python3-wheel python3-venv python3-packaging \
+            zfsutils-linux libzfslinux-dev \
+            git make gzip tar findutils xz-utils gnupg apt-utils \
+            gnupg apt-utils moreutils default-jre-headless graphviz \
+            nodejs npm
 
       - name: Set up GPG for signing
         run: |
