--- a/.github/workflows/build-cockpit-zfs.yml
+++ b/.github/workflows/build-cockpit-zfs.yml
@@ -74,9 +74,9 @@ jobs:
           apt-get update
           apt-get install -y --no-install-recommends \
             build-essential debhelper devscripts fakeroot dpkg-dev dh-python \
-            lintian python3-all python3-setuptools python3-wheel \
-            python3-cython python3-pip pkg-config \
-            libglib2.0-dev libsystemd-dev libzfs-dev \
+            lintian python3-setuptools python3-wheel \
+            cython3 python3-pip pkg-config \
+            libglib2.0-dev libsystemd-dev libzfslinux-dev \
             zfsutils-linux zfs-dkms reprepro curl ca-certificates gnupg \
             pkg-config rsync graphviz default-jre-headless \
             git make gzip tar findutils apt-utils moreutils nodejs npm
